fixed image not working on mobile

--- a/styles/grid-container.css
+++ b/styles/grid-container.css
@@ -46,6 +46,7 @@
     justify-content: center;
     margin: 10%;
     border-radius: 200px;
+    width: 170px;
 }
 
 
